# nono

./: .gitignore  BUILDING.md  Cargo.toml  HANDOVER.md  README.md  check_grammar.py
.github/workflows/: ci.yml  release.yml
examples/blog/: .gitignore  nono.toml  package.json
examples/blog/.claude/skills/nono/: SKILL.md
examples/blog/.github/workflows/: deploy.yml
examples/blog/assets/: app.css
examples/blog/content/posts/: a-quick-note.md  building-nono.md  draft-thing.md  how-to-leave-react.md  on-shipping-nothing.md
examples/blog/layouts/: posts.nono
examples/blog/lib/: components.nono
examples/blog/pages/: about.nono  index.nono
examples/blog/static/: styles.css
examples/should-fail/case-bad-filename/pages/: About_Me.nono
examples/should-fail/case-bad-glob/pages/: index.nono
examples/should-fail/case-unknown-element/pages/: index.nono
examples/torture/content/posts/: one.md  two.md
examples/torture/layouts/: posts.nono
examples/torture/lib/: components.nono
examples/torture/pages/: index.nono
src/: ast.rs  build.rs  config.rs  eval.rs  html.rs  lib.rs  main.rs  nono.pest  parser.rs  scaffold.rs  serve.rs  sources.rs  std.nono  value.rs
tests/: build.rs  integration.rs
tree-sitter-nono/: .gitignore  README.md  grammar.js  neovim.lua  package-lock.json  package.json  tree-sitter.json
tree-sitter-nono/queries/: highlights.scm
tree-sitter-nono/src/: grammar.json  node-types.json  parser.c
tree-sitter-nono/test/corpus/: nono.txt
