[package]
name = "nono"
version = "0.1.0"
edition = "2021"
description = "No, no, I'll do it myself. A spite-driven static site generator."
license = "MIT"

[[bin]]
name = "nono"
path = "src/main.rs"

[dependencies]
pest = "2.7"
pest_derive = "2.7"
walkdir = "2.5"
pulldown-cmark = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
ureq = { version = "2.10", features = ["json"] }
anyhow = "1"
thiserror = "1"
clap = { version = "4", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
